--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,15 @@
     <application android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.VEF">
-        <activity android:name=".MainActivity">
+        <activity android:name=".LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FontysLoginActivity" />
+        <activity android:name=".RoomSelectionActivity" />
+        <activity android:name=".RoomMarkActivity" />
+        <activity android:name=".RoomReviewActivity" />
     </application>
 </manifest>
